--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  overflow: hidden;
 }
 .container{
   border-radius: 5px;
   border: 2px solid #a7a7a7;
-  overflow: hidden;
-  width: 70%;
+  width: 50%;
+  margin-top: 20px;
 }
 
 .title {
@@ -34,7 +35,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  max-height: 500px;
+  max-height: 100vh;
   overflow-y: auto;
 }
 .user-list li {
@@ -56,10 +57,6 @@ body {
   margin: 0 0 10px;
 }
 
-.user-list .user-info p {
-  font-size: 12px;
-}
-
 .user-info .btn{
   width: 20%;
   background-color: rgb(6, 136, 187);
@@ -68,8 +65,4 @@ body {
   border: none;
   border-radius: 5px;
   font-weight: bold;
-}
-
-.user-list li.hide{
-  display: none;
 }
