--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 .container{
   border-radius: 5px;
   border: 2px solid #a7a7a7;
-  width: 50%;
   margin-top: 20px;
 }
 
@@ -33,36 +32,53 @@ body {
 .user-list {
   background-color: #fff;
   list-style-type: none;
-  margin: 0;
+  margin: 10px;
   padding: 0;
   max-height: 100vh;
   overflow-y: auto;
 }
-.user-list li {
-  display: flex;
-  flex-direction: column;
-
+.user-list li{
+  width: 30%;
+  height: 700px;
+  float: left;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  margin: 20px;
   padding: 20px;
 }
-.user-list .section{
-  display: flex;
-  justify-content: space-between;
+.image{
+  text-align: center;
 }
 .user-list img {
-  object-fit: cover;
-  border: 2px solid #a7a7a7;
+  width: 300px;
+  max-height: 350px;
 }
 
 .user-list .user-info h4 {
   margin: 0 0 10px;
 }
 
+
+
 .user-info .btn{
-  width: 20%;
+  width: 30%;
   background-color: rgb(6, 136, 187);
   color: #fff;
   padding: 10px 5px;
   border: none;
   border-radius: 5px;
   font-weight: bold;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1220px){
+  .user-list li{
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 823px){
+  .user-list li{
+    width: 100%;
+    margin:5px;
+  }
 }
