--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@ body {
 .container{
   border-radius: 5px;
   border: 2px solid #a7a7a7;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .title {
   margin: 0;
 }
 .header {
-  background-color: #a7a7a7;
-  color: #393939;
+  background-color: rgb(6, 136, 187);
+  color: #fff;
   padding: 30px 20px;
   text-align: center;
 }
@@ -56,8 +56,6 @@ body {
 .user-list .user-info h4 {
   margin: 0 0 10px;
 }
-
-
 
 .user-info .btn{
   width: 30%;
